# why-too-fast-event-bus

./: .coverage  .gitignore  Cargo.toml  README.md  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/: lib.rs
tests/: test_wrapper.py
why_too_fast_event_bus/: __init__.py  app.py
